res/examples/valid/declare_typed_let_with_list_expr.eg
let a: list<number> = [1, 2, 3];
